--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ background-size:cover;
 .sectionContainer {
     border:solid green;
     /* padding: 2em; */
-    background-image: url('/arkeeEye/media/background.png');
+    background-image: url('/media/background.png');
     background-size: contain;
     color: black;
     /* margin:1em; */
@@ -263,8 +263,8 @@ background-size:cover;
 
 .topScreen {
     border: solid black;
-    height: 42vh;
     width: 60%;
+    height:300px;
 }
 
 .topDescrip {
@@ -275,6 +275,8 @@ background-size:cover;
 .topContainer {
     display: flex;
     /* border: solid black; */
+    background-image: url('/arkeeEye/media/background.png');
+    background-size: contain;
     justify-content: space-around;
 }
 
@@ -282,24 +284,24 @@ background-size:cover;
     /* border: solid red; */
     font-family: cinzel;
     font-size:8px;
-    margin-top: 12%;
+    margin-top:6%;
     text-align: center;
 }
 
 .day:hover {
-     /* border: solid red; */
-     font-family: cinzel;
-     font-size:8px;
-     margin-top: 12%;
-     text-align: center;
+   /* border: solid red; */
+   font-family: cinzel;
+   font-size:8px;
+   margin-top:6%;
+   text-align: center;
     -webkit-box-shadow: 2px 4px 23px 3px #741B0C;
     box-shadow: 2px 4px 23px 3px #741B0C;
 }
 
 .eventLetter {
-    /* border: solid black; */
+    border: solid black;
     display: flex;
-    margin:1em;
+margin:1em;
     justify-content: space-between;
     font-family: cinzel;
     font-size:15px;
@@ -308,16 +310,18 @@ background-size:cover;
 .eventName {
     width: 50%;
     font-size:15px;
+    margin:10px;
 }
 
 .eDesc {
     /* border:solid black; */
     font-size:12px;
+    width:40%;
 }
 .posterLook{
     width:100%;
     height:100%;
-    margin:1em;
+    
 }
 .seperator{
     /* border:solid red; */
@@ -342,4 +346,11 @@ background-size:cover;
 }
 .splatter{
     
+}
+.africaSm{
+    width:100%;
+}
+.img_logo{
+    border:solid black;
+    height:40%
 }
