--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     padding-right: 10px;
 }
 .scrollMsg {
-    animation: scroll 20s ease-in-out infinite;
+    /* animation: scroll 20s ease-in-out infinite; */
     display: flex;
     justify-content: space-around;
     width: 100%;
