--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ margin:1em;
 }
 .img_logo{
     /* border:solid black; */
-    height:30%
+    /* height:30% */
 }
 .buttonGalore{
     /* border:solid black; */
